# paleomap3D

./: .gitignore  README.md  data_bin.7z  deployprod.sh  docker-compose.yaml  main.py  parsenc.py  parsenc6.py
buildtexture/: .gitignore  docker-compose.yaml
buildtexture/ctexture/: .dockerignore.txt  .gitignore  Dockerfile
buildtexture/ctexture/include/: common.h
buildtexture/ctexture/src/: main.c
buildtexture/gplates/: Dockerfile  environment.yml  geojsontopng.py  maps.py  script.py
buildtexture/pyscripts/: parsenc6.py  texture.py
frontend/: .dockerignore  .gitignore  README.md  dockerfile  index.html  package.json  script.js
frontend/public/: binary.js  index.html  maps.js  maps.json  script.js  styles.css
frontend/src/: compressor.ts  index.ts
pyscripts/: texture.py
rs/: .gitignore  README.md  body.html  hud.css  hud.html  hud.js  legend-mockups.html  mockups_arrows.html  paleomap3d.yaml  plan.txt  rightclick.js  slider_mockup.html  styles.css
rs/.giverny/: sessions.json  transcript.md  usage.json
rs/data/: .gitignore  Cargo.toml  build.bat  test.7z  test2.bin.br
rs/data/output/: 10.br  18.br  26.br  27.br  28.br  3.br  37.br  57.br  59.br  75.br  79.br  82.br  83.br  9.br
rs/data/output_name/: 100_Late_Cambrian_490Ma.br  104_early_Middle_Cambrian_515Ma.br  109_Cambrian_Precambrian_boundary_540Ma.br  21_Early_Cretaceous_100Ma.br  22_Early_Cretaceous_105Ma.br  30_Jurassic_Cretaceous_Boundary_145Ma.br  31_Late_Jurassic_150Ma.br  36_Middle_Jurassic_175Ma.br  43_Late_Triassic_215Ma.br  44_Late_Triassic_210Ma.br  4_Middle_Miocene_15Ma.br  51_Permo-Triassic_Boundary_250Ma.br  55_Middle_Permian_270Ma.br  56_Early_Permian_275Ma.br  68_Late_Mississippian_330Ma.br  69_Middle_Mississippian_345Ma.br  8_Late_Eocene_35Ma.br  90_Late_Ordovician_445Ma.br  92_Late_Ordovician_455Ma.br  97_Cambro-Ordovician_Boundary_485Ma.br
rs/data/src/: main.rs
rs/paleomap3d/: .gitignore  Cargo.toml
rs/paleomap3d/output/: 102.br  105_Early_Cambrian_525Ma.br  12.br  15_Late_Cretaceous_70Ma.br  16_Late_Cretaceous_75Ma.br  2.br  24_Early_Cretaceous_115Ma.br  29.br  32_Late_Jurassic_155Ma.br  33_Late_Jurassic_160Ma.br  35.br  38_Early_Jurassic_185Ma.br  39_Early_Jurassic_190Ma.br  40_Early_Jurassic_195Ma.br  42_Late_Triassic_200Ma.br  46.br  49.br  53.br  54_Middle_Permian_260Ma.br  58.br  6.br  60.br  61_Late_Pennsylvanian_300Ma.br  66_Late_Mississippian_325Ma.br  70.br  74.br  76.br  77_Middle_Devonian_385.2Ma.br  78_Late_Devonian_380Ma.br  80_Early_Devonian_395Ma.br  86.br  87_Early_Silurian_435Ma.br  89.br  99.br  (+3 more)
rs/plans/: clone.txt  lighting.txt
rs/wasm_modules/: .gitignore  Cargo.toml  old.txt
rs/wasm_modules/.cargo/: config.toml
rs/wasm_modules/__assets/: test.bin.br  test3.bin.br
rs/wasm_modules/assets/: big1deg.br
rs/wasm_modules/assets/deg1/: 105.br  13.br  14.br  17.br  19.br  20.br  34.br  47.br  50.br  52.br  62.br  63.br  64.br  65.br  71.br  84.br
rs/wasm_modules/assets/shaders/: instancing.wgsl  instancing_6min_webgl2.wgsl  instancing_webgl2.wgsl  sun.wgsl  test.wgsl
rs/wasm_modules/src/: camera.rs  dom.rs  earth.rs  instance_pipeline.rs  instance_pipeline_6min_webgl2.rs  instance_pipeline_webgl2.rs  instance_pipeline_webgpu.rs  lib.rs  mapnames.rs  mapupdate.rs  orbit_camera.rs  render_backend.rs  sun.rs  tools.rs
(+22 files in other folders)
