[package]
name = "wasm_modules"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_modules"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
base64 = "0.22.1"
brotli = "7.0.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
bevy_embedded_assets = "0.13.0" # for 16.0
bytemuck = { version = "1.15", features = ["derive"] }
#bevy_embedded_assets = "0.12.0" # for 15.3
#gltf = "1.4.1"
#iyes_perf_ui = "0.4.0"
#bevy_mini_fps = "0.1.0"
#rand = "0.9.0"
#getrandom = { version = "0.3.2", features = ["wasm_js"] }

#[target.'cfg(not(target_family = "wasm"))'.dependencies]
#bevy_dylib = { version = "0.15.0-rc.3" }
#bevy_dylib = { version = "0.16.1" }

[dependencies.bevy]
#version = "0.15.3"
version = "0.16.0"
default-features = false
features = [
    "dynamic_linking",      # for faster dev
    "bevy_winit",           # Window handling
    "bevy_render",          # render system
    "bevy_core_pipeline",   # core render pipeline
    "bevy_pbr",             # 3D render
    "bevy_text",            # text rendering
    "bevy_ui",              # UI system
    #"webgl2",               # WebGL2 support (crucial for web)
    "webgpu",
    "tonemapping_luts",
    "default_font",
    #"png",                  # Image support
    #"bevy_image",           # load images
    #"bevy_gltf",
    #"animation",
    #"bevy_sprite",         # 2D support
    #"iyes_perf_ui"
    #"diagnostic"
]


[dependencies.web-sys]
version = "0.3.77"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'Performance',
    'WheelEvent',
    'KeyboardEvent',
    'MouseEvent',
    'CssStyleDeclaration',
]


[profile.dev]
opt-level = 1
incremental = true
codegen-units = 16

[profile.dev.package."*"]
strip = true
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#panic = "abort"
strip = true
#debug = true

# wasm-pack compilation
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz", 
    "--optimize-level=3", 
    "--shrink-level=2", 
    "--enable-bulk-memory", 
    "--enable-nontrapping-float-to-int"
]

# all of this was just me playing around with optimization
#rustflags = []
#wasm-opt = ["--optimize-level=4", "--shrink-level=2", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
#wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-mutable-globals"]
#wasm-opt = [
#    "--optimize-level=4",
#    "--shrink-level=2",
#    "--enable-mutable-globals",
#    "--enable-bulk-memory"
#]
#wasm-opt = ["-O4"]
#wasm-opt = ["-Oz", "--optimize-level=3", "--shrink-level=2"]
#wasm-opt = ["-O1"]
#wasm-opt = false
#wasm-opt = ["-O3", "--enable-mutable-globals"]


## You can keep some optimizations but not all
#lto = "thin"  # Use thin LTO instead of full
#codegen-units = 16  # More than 1 for faster compilation
#
#[profile.optimized-dev]
#inherits = "dev"
#opt-level = 2
#lto = "thin"
#codegen-units = 8
#

# These optimizations are important for WASM
#[profile.dev]
#opt-level = 1
#[profile.dev.package."*"]
#opt-level = 3
